-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.0
-
None
-
-
b997d095a1 (qt-creator/qt-creator/master) b997d095a1 (qt-creator/qt-creator/qds/dev)
I had a git hook which ran a clang formatter which returned with the following output:
16:38:51 Running in /home/mm/Projektek/kicad: /usr/bin/git commit -F /tmp/QtCreator.QCNJOJ --amend ERROR: you need to run clang-format (e.g. using tools/check_coding.sh) on your commit diff --git a/eeschema/sch_screen.cpp b/eeschema/sch_screen.cpp index bbb8648f94..c877c23cbf 100644 --- a/eeschema/sch_screen.cpp +++ b/eeschema/sch_screen.cpp @@ -429,7 +429,7 @@ bool SCH_SCREEN::IsExplicitJunctionNeeded( const VECTOR2I& aPosition ) const return isJunction && !hasBusEntry && !hasExplicitJunction;
It would be great if the
--- a/eeschema/sch_screen.cpp +++ b/eeschema/sch_screen.cpp
lines would have been converted to links to ease the opening of these files.
What do you think aha_1980 ?
- is required for
-
QTCREATORBUG-19721 Git user interface improvements
-
- Reported
-
- relates to
-
QTCREATORBUG-27374 Git: Don't limit git output to 80 columns
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-27309 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
437674,2 | VCS: Linkify file names in diff output | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |