VCS: Linkify file names in diff output

Fixes: QTCREATORBUG-27309
Change-Id: I1236b3fb5a34d762b4eb42320cdb9ac5ec7e38a2
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: André Hartmann <aha_1980@gmx.de>